= 2.0.0.91 =
* Category font awesome icons have extra fas class on output which break few icons – FIXED
* Post badge widget shows excluded fields from package - FIELD
* GD Archive map with elementor loop might not filter markers if map is before loop - FIXED
* Translation of screen_id break GD dashboard functionality - FIXED
* YOOtheme shows incorrect title on GD pages - FIXED

= 2.0.0.90 =
* Customize map popup template for the post type - ADDED
* Detail page tabs & dropdown is not working on mobile device - FIXED
* GD > Listings widget elementor skin select not working - FIXED
* Use default location offset as a business hours default offset - CHANGED
* Response header shows 404 status when on results found on GD search page - FIXED

= 2.0.0.89 =
* Badge shortcode for file field %%input%% return file array - FIXED
* Yoast SEO OpenGraph meta not working on GD pages - FIXED
* Elementor Pro Utils class moved which can cause errors in older vers of Elementor - FIXED
* Elementor Icon List items can be hidden when empty by adding fallback of #hide - ADDED
* Elementor Star Rating needs to be rounded to one decimal place - FIXED
* Elementor CSS hide conditions now remove content instead of just hiding with CSS - CHANGED

= 2.0.0.88 =
* Comment images can now be used in Elementor Pro galleries - ADDED
* Post Images widget can show logo if not specifically set not to - FIXED

= 2.0.0.87 =
* Allow show / hide categories in GD > Categories widget - ADDED
* Incorrect validation message attribute on url type custom fields - FIXED
* GD > Listings widget can now use Elementor Pro Archive item template - ADDED

= 2.0.0.85 =
* Embed post not working for GD listing - FIXED
* Add address fields in post meta keys list - ADDED
* [gd_cpt_meta] widget/shortcode added to show cpt meta title, meta description, description, image etc - ADDED
* Check edit listing page & add body class for add/edit listing page - ADDED
* Show image caption and title based on setting - FIXED